--- a/src/components/weatherCard/styles.module.scss
+++ b/src/components/weatherCard/styles.module.scss
@@ -1,13 +1,3 @@
-.searchBtn {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
-}
-
 .searchWrap {
     display: flex;
     justify-content: center;
@@ -15,7 +5,6 @@
 }
 
 .search {
-    display: flex;
     border-radius: 5px;
     border: 1px solid #000;
     position: relative;
@@ -41,7 +30,7 @@
 
 .searchInput {
     border: none;
-    border-radius: 5px 0 0 5px;
+    border-radius: 5px;
     padding: 5px 8px;
     font-size: 20px;
     line-height: 24px;
